# SnakeGame-SDL

./: CMakeLists.txt  README.md
src/: Base.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Map.cpp  Map.hpp  ObjectPool.hpp  Vector.hpp  main.cpp
src/AchievementSystem/: Achievement.hpp  AchievementSystem.cpp  AchievementSystem.hpp  CMakeLists.txt
src/AchievementSystem/Achievement/: Achievement.hpp  AchievementAnimation.hpp
src/AchievementSystem/Achievement/config/: achieve_config.cfg
src/AchievementSystem/AchievementSettings/: AchievementSettings.cpp  AchievementSettings.hpp  CMakeLists.txt
src/AchievementSystem/Achievements/: CMakeLists.txt  FiveHundredScore.cpp  FiveHundredScore.hpp  OneHundredScore.cpp  OneHundredScore.hpp  OneThousandScore.cpp  OneThousandScore.hpp
src/CAppSettings/: CAppSettings.cpp  CAppSettings.hpp  CMakeLists.txt
src/CAppSettings/AppConfig/: config.cfg
src/CSDLContext/: CMakeLists.txt  CSDLContext.cpp  CSDLContext.hpp
src/CollideSystem/: CMakeLists.txt  CollideSystem.cpp  CollideSystem.hpp
src/Entity/: CMakeLists.txt  Entity.hpp  EntityNull.hpp
src/FontManager/: CMakeLists.txt  FontManager.cpp  FontManager.hpp
src/Food/: CMakeLists.txt  Food.cpp  Food.hpp  FoodBuilder.hpp
src/Food/FoodFlyweight/: CMakeLists.txt  FoodFlyweight.cpp  FoodFlyweight.hpp
src/GUI/: CMakeLists.txt  base.hpp
src/GUI/Easing/: Easing.hpp
src/GUI/InertialScroll/: InertialScroll.cpp  InertialScroll.hpp
src/GUI/Text/: CMakeLists.txt  Text.cpp  Text.hpp
src/GUI/UIElements/: Datafield.hpp  ProgressBar.hpp
src/GameScenes/: CExit.cpp  CExit.hpp  CMakeLists.txt  CMatchHistory.cpp  CMatchHistory.hpp  CMenu.cpp  CMenu.hpp  CPause.cpp  CPause.hpp  CPlaying.cpp  CPlaying.hpp  CStats.cpp  CStats.hpp  GameScene.hpp  GameScenesController.cpp  GameScenesController.hpp
src/GameScenes/ScenesUtils/DataField/: DataField.cpp  DataField.hpp
src/GameScenes/ScenesUtils/InertialScroll/: InertialScroll.cpp  InertialScroll.hpp
src/GameScore/: CMakeLists.txt  GameScore.cpp  GameScore.hpp
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/Observer/: CMakeLists.txt  Observer.hpp  ObserverEvents.hpp
src/Observer/Subject/: Subject.cpp  Subject.hpp
src/Serializer/: CMakeLists.txt  Serializer.hpp
src/Snake/: CMakeLists.txt  ISnakeStates.hpp  Snake.cpp  Snake.hpp  SnakeBody.cpp  SnakeBody.hpp  SnakeModel.hpp
src/Snake/SnakeCommands/: Command.hpp  MoveTo.hpp
src/Snake/SnakeStates/: CMakeLists.txt  IdleState.cpp  IdleState.hpp  MovingState.cpp  MovingState.hpp  SnakeStatesController.cpp  SnakeStatesController.hpp
src/Sound/: CMakeLists.txt  Sound.cpp  Sound.hpp  SoundManager.hpp
src/SoundManager/: CMakeLists.txt  SoundManager.cpp  SoundManager.hpp
src/SpriteAnimation/: CMakeLists.txt  SpriteAnimation.cpp  SpriteAnimation.hpp
src/Texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
src/TextureAnimation/: CMakeLists.txt  TextureAnimation.cpp  TextureAnimation.hpp
src/TextureManager/: CMakeLists.txt  TextureManager.cpp  TextureManager.hpp
src/Timer/: CMakeLists.txt  Timer.cpp  Timer.hpp
src/Timestamp/: CMakeLists.txt  Timestamp.cpp  Timestamp.hpp
src/assets/GameScenes/CMatchHistory/: Board.psd  CMatchHistory-Data.cfg  data_field.psd  score_history.cfg
src/assets/Other/: achievement.psd
src/assets/food/configs/: food.cfg
src/assets/snake/Ultimate/: psd_poison_particle_vfx.psd
